# astron-claw

./: .dockerignore  .gitignore  Dockerfile  README.md  install.sh
docs/: api.md
frontend/: admin.html  index.html
plugin/: openclaw.plugin.json  package-lock.json  package.json
server/: .env.example  admin_auth.py  alembic.ini  app.py  bridge.py  cache.py  config.py  database.py  log.py  media_manager.py  pyproject.toml  requirements.txt  run.py  token_manager.py
server/migrations/: env.py
server/migrations/versions/: 260572e0c2da_init_create_tokens_admin_config_media_.py  6c68fd2d09ca_add_auto_increment_id_primary_key_to_.py
